# RGUI

./: CMakeLists.txt  README.md
include/: error_codes.hpp  window_widget.hpp
src/: window_widget.cpp
